--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
-                     <h1 class="call_text">Call Us : +27 71 155 5974</h1>
+                     <h1 class="call_text">Call Me: +27 71 155 5974</h1>
                   </form>
                  
                </div>
