--- a/shop.html
+++ b/shop.html
@@ -124,8 +124,8 @@
      <div class="row projects-container">
        <div class="col-sm-4 project-item" data-category="headwear">
          <div class="container_main1">
-           <img src="images/headwear.jpeg" alt="Avatar" class="image" style="width:100%">
-           <h1 class="modern_text">Headwear</h1>
+           <a href="shop.html"><img src="images/headwear.jpeg" alt="Avatar" class="image" style="width:100%"></a>
+            <h1 class="modern_text">Headwear</h1>
           
          </div>
        </div>
