--- a/shop.html
+++ b/shop.html
@@ -125,7 +125,7 @@
        <div class="col-sm-4 project-item" data-category="headwear">
          <div class="container_main1">
            <a href="shop.html"><img src="images/headwear.jpeg" alt="Avatar" class="image" style="width:100%"></a>
-            <a href="shop.html"><h1 class="modern_text">Headwear</h1><\a>
+            <a href="shop.html" class="modern_text">HEADWEAR<\a>
           
          </div>
        </div>
